# sentro

.github/workflows/: python-package.yml
sentro/: LICENSE
sentro/sentro/: .gitignore  README.md  pyproject.toml
sentro/sentro/src/sentro/: __init__.py  cli.py  config.py  installer.py  models.py  orchestrator.py
sentro/sentro/src/sentro/data/: popular_packages.txt
sentro/sentro/src/sentro/extraction/: extractor.py  sdist_extractor.py  wheel_extractor.py
sentro/sentro/src/sentro/pypi/: client.py  downloader.py
sentro/sentro/src/sentro/reporting/: json_reporter.py  reporter.py  text_reporter.py
sentro/sentro/src/sentro/scanners/: base.py  dependency_confusion.py  malicious_code.py  metadata.py  obfuscation.py  setup_hooks.py  typosquatting.py
sentro/sentro/tests/: conftest.py  test_cli.py  test_config.py  test_extractor.py  test_installer.py  test_integration.py  test_models.py  test_pipeline.py  test_reporter.py  test_scanner_dependency_confusion.py  test_scanner_malicious_code.py  test_scanner_metadata.py  test_scanner_obfuscation.py  test_scanner_setup_hooks.py  test_scanner_typosquatting.py
sentro/sentro/tests/fixtures/pypi_responses/: new_package.json  requests.json
